logs/objection.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/EditorConfig-0.12.1.dist-info'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/Pygments-2.2.0.dist-info'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/click'...
Listing './lib/python3.5/site-packages/click-6.7.dist-info'...
Listing './lib/python3.5/site-packages/colorama'...
Listing './lib/python3.5/site-packages/colorama-0.3.9.dist-info'...
Listing './lib/python3.5/site-packages/delegator.py-0.0.14.dist-info'...
Listing './lib/python3.5/site-packages/editorconfig'...
Listing './lib/python3.5/site-packages/frida'...
Listing './lib/python3.5/site-packages/frida-10.6.32.egg-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/jsbeautifier'...
Listing './lib/python3.5/site-packages/jsbeautifier/core'...
Listing './lib/python3.5/site-packages/jsbeautifier/javascript'...
Listing './lib/python3.5/site-packages/jsbeautifier/tests'...
Listing './lib/python3.5/site-packages/jsbeautifier/tests/generated'...
Listing './lib/python3.5/site-packages/jsbeautifier/unpackers'...
Listing './lib/python3.5/site-packages/jsbeautifier/unpackers/tests'...
Listing './lib/python3.5/site-packages/jsbeautifier-1.7.5.egg-info'...
Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/objection'...
Listing './lib/python3.5/site-packages/objection/commands'...
Listing './lib/python3.5/site-packages/objection/commands/android'...
Listing './lib/python3.5/site-packages/objection/commands/ios'...
Listing './lib/python3.5/site-packages/objection/console'...
Listing './lib/python3.5/site-packages/objection/console/helpfiles'...
Listing './lib/python3.5/site-packages/objection/hooks'...
Listing './lib/python3.5/site-packages/objection/hooks/android'...
Listing './lib/python3.5/site-packages/objection/hooks/android/clipboard'...
Listing './lib/python3.5/site-packages/objection/hooks/android/command'...
Listing './lib/python3.5/site-packages/objection/hooks/android/filesystem'...
Listing './lib/python3.5/site-packages/objection/hooks/android/hooking'...
Listing './lib/python3.5/site-packages/objection/hooks/android/intent'...
Listing './lib/python3.5/site-packages/objection/hooks/android/keystore'...
Listing './lib/python3.5/site-packages/objection/hooks/android/pinning'...
Listing './lib/python3.5/site-packages/objection/hooks/android/root'...
Listing './lib/python3.5/site-packages/objection/hooks/android/screenshot'...
Listing './lib/python3.5/site-packages/objection/hooks/android/ui'...
Listing './lib/python3.5/site-packages/objection/hooks/base'...
Listing './lib/python3.5/site-packages/objection/hooks/generic'...
Listing './lib/python3.5/site-packages/objection/hooks/generic/memory'...
Listing './lib/python3.5/site-packages/objection/hooks/ios'...
Listing './lib/python3.5/site-packages/objection/hooks/ios/binarycookie'...
Listing './lib/python3.5/site-packages/objection/hooks/ios/command'...
Listing './lib/python3.5/site-packages/objection/hooks/ios/filesystem'...
Listing './lib/python3.5/site-packages/objection/hooks/ios/hooking'...
Listing './lib/python3.5/site-packages/objection/hooks/ios/jailbreak'...
Listing './lib/python3.5/site-packages/objection/hooks/ios/keychain'...
Listing './lib/python3.5/site-packages/objection/hooks/ios/nsuserdefaults'...
Listing './lib/python3.5/site-packages/objection/hooks/ios/pasteboard'...
Listing './lib/python3.5/site-packages/objection/hooks/ios/pinning'...
Listing './lib/python3.5/site-packages/objection/hooks/ios/plist'...
Listing './lib/python3.5/site-packages/objection/hooks/ios/screenshot'...
Listing './lib/python3.5/site-packages/objection/hooks/ios/ui'...
Listing './lib/python3.5/site-packages/objection/state'...
Listing './lib/python3.5/site-packages/objection/utils'...
Listing './lib/python3.5/site-packages/objection/utils/assets'...
Listing './lib/python3.5/site-packages/objection/utils/patchers'...
Listing './lib/python3.5/site-packages/objection-1.2.3.egg-info'...
Listing './lib/python3.5/site-packages/pexpect'...
Listing './lib/python3.5/site-packages/pexpect-4.3.1.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/prompt_toolkit'...
Listing './lib/python3.5/site-packages/prompt_toolkit/clipboard'...
Listing './lib/python3.5/site-packages/prompt_toolkit/contrib'...
Listing './lib/python3.5/site-packages/prompt_toolkit/contrib/completers'...
Listing './lib/python3.5/site-packages/prompt_toolkit/contrib/regular_languages'...
Listing './lib/python3.5/site-packages/prompt_toolkit/contrib/telnet'...
Listing './lib/python3.5/site-packages/prompt_toolkit/contrib/validators'...
Listing './lib/python3.5/site-packages/prompt_toolkit/eventloop'...
Listing './lib/python3.5/site-packages/prompt_toolkit/filters'...
Listing './lib/python3.5/site-packages/prompt_toolkit/key_binding'...
Listing './lib/python3.5/site-packages/prompt_toolkit/key_binding/bindings'...
Listing './lib/python3.5/site-packages/prompt_toolkit/layout'...
Listing './lib/python3.5/site-packages/prompt_toolkit/styles'...
Listing './lib/python3.5/site-packages/prompt_toolkit/terminal'...
Listing './lib/python3.5/site-packages/prompt_toolkit-1.0.15.dist-info'...
Listing './lib/python3.5/site-packages/ptyprocess'...
Listing './lib/python3.5/site-packages/ptyprocess-0.5.2.dist-info'...
Listing './lib/python3.5/site-packages/pygments'...
Listing './lib/python3.5/site-packages/pygments/filters'...
Listing './lib/python3.5/site-packages/pygments/formatters'...
Listing './lib/python3.5/site-packages/pygments/lexers'...
Listing './lib/python3.5/site-packages/pygments/styles'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/tabulate-0.8.2.egg-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './lib/python3.5/site-packages/wcwidth'...
Listing './lib/python3.5/site-packages/wcwidth/tests'...
Listing './lib/python3.5/site-packages/wcwidth-0.1.7.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
